# panorama

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  cortex-manifest.toml  final-stretch.md  governance.md  incomplete-items.md  master-plan-1.2.md  meta-plan.md
.github/workflows/: ci.yml
crates/admin-interface/: Cargo.toml
crates/admin-interface/src/: main.rs
crates/admin-interface/src/api/: config_viewer.rs  errors.rs  halt.rs  health.rs  identity.rs  logs.rs  mod.rs  permissions.rs  wheelhouse.rs
crates/admin-interface/src/auth/: mod.rs  session.rs  webauthn.rs
crates/analog-communications/: Cargo.toml
crates/analog-communications/src/: config.rs  dispatch.rs  identity.rs  inbound.rs  lib.rs  main.rs  pipeline.rs  sanitization.rs  totp.rs
crates/cloak-core/: Cargo.toml
crates/cloak-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/cloak-permissions/: Cargo.toml
crates/cloak-permissions/src/: engine.rs  lib.rs  model.rs  routes.rs
crates/cloak-registry/: Cargo.toml
crates/cloak-registry/src/: lib.rs  registration.rs  routes.rs  sse.rs  store.rs
crates/cloak-sdk/: Cargo.toml
crates/cloak-sdk/src/: client.rs  lib.rs  middleware.rs  sse.rs  state.rs
crates/cloak-secrets/: Cargo.toml
crates/cloak-secrets/src/: cache.rs  infisical.rs  lib.rs  routes.rs
crates/cloak-server/: Cargo.toml
crates/cloak-server/src/: admin.rs  health.rs  lib.rs  main.rs  middleware.rs  router.rs  state.rs
crates/cloak-tokens/: Cargo.toml
crates/cloak-tokens/src/: issuance.rs  lib.rs  routes.rs  signing.rs  validation.rs
crates/cortex-api/: Cargo.toml
crates/cortex-api/src/: config.rs  health.rs  lib.rs  main.rs  proxy.rs  router.rs  state.rs
crates/cortex-auth/: Cargo.toml
crates/cortex-auth/src/: lib.rs
crates/cortex-core/: Cargo.toml
crates/cortex-core/src/: lib.rs
crates/cortex-mcp/: Cargo.toml
crates/cortex-mcp/src/: lib.rs  main.rs  protocol.rs  server.rs  tools.rs
crates/datastore/: Cargo.toml
crates/datastore/src/: blob.rs  config.rs  lib.rs  main.rs  routes.rs  sqlite.rs  state.rs
crates/gateway/: .gitignore  Cargo.toml  gateway.example.toml  gateway.md
crates/gateway/migrations/: 001_operational_log.sql  002_audit_log.sql  003_route_store.sql
crates/gateway/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  server.rs  types.rs
crates/gateway/src/accounting/: budget.rs  cost.rs  mod.rs
crates/gateway/src/alerts/: mod.rs  router.rs  sms.rs  webhook.rs
crates/gateway/src/cli/: commands.rs
crates/gateway/src/dedup/: fingerprint.rs
crates/gateway/src/identity/: cloak_auth.rs  mod.rs  tokens.rs
crates/gateway/src/kill_switch/: controller.rs
crates/gateway/src/logging/: audit.rs  mod.rs  operational.rs
crates/gateway/src/providers/: anthropic.rs  custom.rs  mod.rs  openai.rs
crates/gateway/src/rate_limit/: limiter.rs
crates/gateway/src/routes/: dispatcher.rs  health.rs  mod.rs  store.rs
crates/gateway/src/sanitizer/: inbound.rs  mod.rs  outbound.rs  rules.rs
crates/gateway/tests/: accounting_tests.rs  config_tests.rs  dedup_tests.rs  error_tests.rs  identity_tests.rs  kill_switch_tests.rs  logging_tests.rs  rate_limit_tests.rs  route_store_full_tests.rs  route_store_tests.rs  sanitizer_tests.rs
crates/panorama-errors/: Cargo.toml
crates/panorama-errors/src/: catalog.rs  lib.rs
crates/panorama-logging/: Cargo.toml
crates/panorama-logging/src/: layer.rs  lib.rs  writer.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: cloak.rs  cortex.rs  lib.rs  stub_service.rs  tokens.rs
crates/wheelhouse/: Cargo.toml
crates/wheelhouse-agent-lifecycle/: Cargo.toml
crates/wheelhouse-agent-lifecycle/src/: fate.rs  lib.rs  pool.rs
crates/wheelhouse-task-manager/: Cargo.toml
crates/wheelhouse-task-manager/src/: brief.rs  deconstructor.rs  lib.rs  types.rs
crates/wheelhouse/src/: cascade.rs  config.rs  hub.rs  job.rs  lib.rs  main.rs  orchestrator.rs  state.rs
data/: datastore.db-shm  datastore.db-wal  gateway_audit.db-shm  gateway_audit.db-wal  gateway_logs.db-shm  gateway_logs.db-wal  gateway_routes.db-shm  gateway_routes.db-wal  panorama_logs.db  panorama_logs.db-shm  panorama_logs.db-wal  webauthn_credentials.json
docker/infisical/: docker-compose.yml
docs/design-docs/: design-diagram.md  panorama-master-plan-v1.0.md  state-of-project.md
docs/design-docs/agent-design/: agent-middleware.md  create-mcp-client.md  create-mcp-server.md  great-example-prompt.md  mantra-memory-context-constructor.md  memory-limiting-constructir.md  structured-output-by-schema.md  suspend-resume-workflow-mastra.md  tool-schema-example.md
docs/design-docs/cerebro/: cerebro-backend-implementation.md  cerebro-kg-design.md  citation-inclusion-design-schema.md  extraction-design-schema.md
docs/design-docs/cortex/: cortex-spec.docx
docs/specs/: admin-interface-DESIGN.md  analog-communications-DESIGN.md  cloak.md  cortex-spec.md
docs/wheelhouse-designs/: task-manager.md
scripts/: install-macos.sh  install.sh  setup-tunnel.sh
tests/cross-language/: fixture.json  generate_fixture.sh  mint_test_token.rs  verify_token.py  verify_token.ts
tests/integration/: Cargo.toml
tests/integration/tests/: cold_start.rs  halt_cascade.rs  token_flow.rs
