[package]
name = "admin-interface"
version = "0.1.0"
edition = "2021"
description = "Single-user admin panel for Panorama (Axum + HTMX)"

[[bin]]
name = "admin-interface"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }

# HTTP client (for service health checks)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Time
chrono = { workspace = true }

# Database (log viewer reads panorama_logs.db directly)
rusqlite = { workspace = true }

# Logging / tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# WebAuthn (FIDO2 / YubiKey)
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
url = "2"

# Cloak integration
cloak-sdk = { path = "../cloak-sdk" }
cloak-core = { path = "../cloak-core" }
panorama-logging = { path = "../panorama-logging" }
