[package]
name = "analog-communications"
version = "0.1.0"
edition = "2021"
description = "Analog communications — Telnyx SMS inbound, IDEA pipeline, identity resolution"

[[bin]]
name = "analog-communications"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client (dispatch to Wheelhouse/Cerebro via Cortex)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto (Ed25519 webhook verification, TOTP)
sha2 = { workspace = true }
hmac = { workspace = true }

# IDs and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging / tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Regex (sanitization)
regex = { workspace = true }

# Cloak integration
cloak-sdk = { path = "../cloak-sdk" }
cloak-core = { path = "../cloak-core" }
