[package]
name = "cloak-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
cloak-core = { path = "../cloak-core" }
cloak-secrets = { path = "../cloak-secrets" }
cloak-tokens = { path = "../cloak-tokens" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
