[package]
name = "cloak-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cloak-core = { path = "../cloak-core" }
cloak-registry = { path = "../cloak-registry" }
cloak-permissions = { path = "../cloak-permissions" }
cloak-secrets = { path = "../cloak-secrets" }
cloak-tokens = { path = "../cloak-tokens" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
