[package]
name = "cortex-api"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-auth = { path = "../cortex-auth" }
cloak-sdk = { path = "../cloak-sdk" }
cloak-core = { path = "../cloak-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
