[package]
name = "cortex-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-auth = { path = "../cortex-auth" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
# MCP SDK placeholder - need to find appropriate crate
# mcp-sdk = "0.1"
