[package]
name = "cortex-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server — exposes Panorama services as AI-callable tools"

[[bin]]
name = "cortex-mcp"
path = "src/main.rs"

[dependencies]
cortex-core = { path = "../cortex-core" }

# Async runtime
tokio = { workspace = true }

# HTTP client (proxy tool calls to Cortex)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
