[package]
name = "datastore"
version = "0.1.0"
edition = "2021"
description = "Datastore — multi-backend storage service for Panorama"

[[bin]]
name = "datastore"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
rusqlite = { workspace = true }

# Crypto
sha2 = { workspace = true }
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Logging / tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Cloak integration
cloak-sdk = { path = "../cloak-sdk" }
cloak-core = { path = "../cloak-core" }
