[package]
name = "panorama-logging"
version = "0.1.0"
edition = "2021"

[dependencies]
panorama-errors = { path = "../panorama-errors" }
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
