[package]
name = "wheelhouse-task-manager"
version = "0.1.0"
edition = "2021"
description = "Task lifecycle management for Wheelhouse agent orchestration"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
