[package]
name = "wheelhouse"
version = "0.1.0"
edition = "2021"
description = "Wheelhouse — 4-tier agent orchestration engine for Panorama"

[[bin]]
name = "wheelhouse"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client (Cortex proxy calls)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging / tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Cloak integration
cloak-sdk = { path = "../cloak-sdk" }
cloak-core = { path = "../cloak-core" }

# Wheelhouse sub-crates
wheelhouse-task-manager = { path = "../wheelhouse-task-manager" }
wheelhouse-agent-lifecycle = { path = "../wheelhouse-agent-lifecycle" }
